# llms-txt-generator

./: .gitignore  README.md
app/server/: Dockerfile  pyproject.toml  pytest.ini
app/server/server/: config.py  dependencies.py  main.py
app/server/server/errors/: __init__.py  generation.py  run.py
app/server/server/repositories/: __init__.py  generation_repository.py  generation_types.py  run_repository.py
app/server/server/routers/: downloads.py  generate.py  run_events.py  runs.py  sites.py
app/server/server/schemas/: __init__.py  downloads.py  generate.py  runs.py  sites.py
app/server/server/services/: __init__.py  download_service.py  generation_service.py  run_events_service.py  run_service.py
app/server/server/utils/: __init__.py  url.py
app/server/tests/e2e/: conftest.py  test_generate_e2e.py
app/shared/: pyproject.toml
app/shared/migrations/: alembic.ini  env.py
app/shared/migrations/versions/: 3275ca2f94f9_initial_schema.py  73512bb8daa9_slice_4_render_mode_contract.py  7b6c5d4e3f21_add_ctx_artifact_keys_to_runs.py  8c9d0e1f2a34_remove_run_artifact_key_columns.py  9af7f3f4c1b2_set_runs_max_pages_default_20.py  b3f6a1c9d2e4_remove_unused_site_pages_columns.py  e4b1d0b9a7d2_add_ready_for_llm_generation_state.py
app/shared/shared/: logging.py
app/shared/shared/config/: __init__.py  env.py
app/shared/shared/constants/: __init__.py  page_status.py  render_mode.py  reservation_outcome.py  run_limits.py  run_state.py  sns_attributes.py  trigger_reason.py
app/shared/shared/db/: engine.py  migrate.py  session.py
infra/: README.md  app.py
(+107 files in other folders)
