[project]
name = "llmstxt-server"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "pydantic>=2.0,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "llmstxt-shared",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server"]
