[project]
name = "llmstxt-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "greenlet>=3.0,<4.0",
    "asyncpg>=0.29,<1.0",
    "aioboto3>=13.0,<14.0",
    "httpx>=0.27,<1.0",
    "alembic>=1.13,<2.0",
    "pydantic>=2.0,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "lxml>=5.0,<6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]
